# tuxtile

./: .shellcheckrc  Cargo.toml  LICENSE  start.sh
.github/workflows/: bashisms.yml  issue-slash-commands.yaml  preview.yml  tuxtile.yml
core/: Cargo.toml
core/src/: inner.rs
docs/: features.md
tabs/: common-script.sh
tabs/desktop/: dwm-gab.sh
ui/: Cargo.toml
ui/src/: confirmation.rs  filter.rs  floating_text.rs  main.rs  root.rs  running_command.rs  state.rs  theme.rs
xtask/: Cargo.toml
xtask/src/: docgen.rs
