[workspace.package]
name = "tuxtile"
version = "25.7.18"
edition = "2024"
license = "MIT"
repository = "https://github.com/dallagnoli/tuxtile"
description = "TuxTile is a Linux toolbox designed to automate system setup tasks."

[workspace]
members = ["core", "ui", "xtask"]
default-members = ["core", "ui"]
resolver = "2"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
