[package]
name = "tuxtile_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
include = ["src/**", "Cargo.toml", "../scripts/**"]

[dependencies]
include_dir = "0.7.4"
temp-dir = "0.1.14"
serde = { version = "1.0.215", features = ["derive"], default-features = false }
toml = { version = "0.9.4", features = ["parse"], default-features = false }
which = "7.0.0"
ego-tree = "0.9.0"
