[package]
name = "tuxtile_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
include = ["src/**", "Cargo.toml"]

[dependencies]
tuxtile_core = { path = "../core" }
clap = { version = "4.5.20", features = ["derive"] }
oneshot = { version = "0.1.8", features = ["std"], default-features = false }
portable-pty = "0.8.1"
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
tui-term = { version = "0.2.0", default-features = false }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"], default-features = false }
unicode-width = { version = "0.2.0", default-features = false }
rand = { version = "0.9.2", optional = true }
tree-sitter-highlight = "0.24.4"
tree-sitter-bash = "0.23.3"
nix = { version = "0.29.0", features = [ "user" ] }
vt100-ctt = "0.16.0"

[[bin]]
name = "tuxtile"
path = "src/main.rs"
